--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "start": "npm install && cd backend && npm install && nodemon index.js",
+    "start": "node backend/index.js",
     "dev": "nodemon backend/index.js",
     "build":"npm install && cd frontend && npm install && npm run build"
   },
