--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "jsonwebtoken": "^9.0.2",
-    "mongoose": "^7.0.0"
+    "mongoose": "^7.0.0",
     "multer": "^1.4.5-lts.1",
     "path": "^0.12.7",
     "socket.io": "^4.8.1"
